--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -1387,18 +1387,6 @@ html{
   outline-offset: 2px;
 }
 
-.card-body {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  padding: var(--padding-card, 2rem);
-  gap: 0.5rem;
-}
-
-.card-body :where(p) {
-  flex-grow: 1;
-}
-
 .card-actions {
   display: flex;
   flex-wrap: wrap;
@@ -2345,15 +2333,6 @@ input.tab:checked + .tab-content,
     var(--togglehandleborder);
 }
 
-.badge-secondary {
-  --tw-border-opacity: 1;
-  border-color: var(--fallback-s,oklch(var(--s)/var(--tw-border-opacity)));
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-s,oklch(var(--s)/var(--tw-bg-opacity)));
-  --tw-text-opacity: 1;
-  color: var(--fallback-sc,oklch(var(--sc)/var(--tw-text-opacity)));
-}
-
 .badge-outline {
   border-color: currentColor;
   --tw-border-opacity: 0.5;
@@ -2538,15 +2517,6 @@ input.tab:checked + .tab-content,
   padding: 1rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.card-title {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  font-weight: 600;
 }
 
 .card.image-full :where(figure) {
@@ -3757,26 +3727,6 @@ input.tab:checked + .tab-content,
   bottom: auto;
 }
 
-.card-compact .card-body {
-  padding: 1rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.card-compact .card-title {
-  margin-bottom: 0.25rem;
-}
-
-.card-normal .card-body {
-  padding: var(--padding-card, 2rem);
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.card-normal .card-title {
-  margin-bottom: 0.75rem;
-}
-
 .join.join-vertical > :where(*:not(:first-child)) {
   margin-left: 0px;
   margin-right: 0px;
@@ -4121,10 +4071,6 @@ input.tab:checked + .tab-content,
   right: 0px;
 }
 
-.right-2 {
-  right: 0.5rem;
-}
-
 .right-3 {
   right: 0.75rem;
 }
@@ -4309,6 +4255,11 @@ input.tab:checked + .tab-content,
   margin-right: auto;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -4369,11 +4320,6 @@ input.tab:checked + .tab-content,
   margin-bottom: auto;
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
 .\!mt-0 {
   margin-top: 0px !important;
 }
@@ -4412,6 +4358,10 @@ input.tab:checked + .tab-content,
 
 .mb-0 {
   margin-bottom: 0px;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-10 {
@@ -4518,10 +4468,6 @@ input.tab:checked + .tab-content,
   margin-top: 0.15rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -4622,10 +4568,6 @@ input.tab:checked + .tab-content,
   height: 10rem;
 }
 
-.h-44 {
-  height: 11rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
@@ -4654,8 +4596,8 @@ input.tab:checked + .tab-content,
   height: 3px;
 }
 
-.h-\[550px\] {
-  height: 550px;
+.h-\[650px\] {
+  height: 650px;
 }
 
 .h-\[calc\(100vh-3\.5rem\)\] {
@@ -4692,6 +4634,10 @@ input.tab:checked + .tab-content,
 
 .h-screen {
   height: 100vh;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .max-h-14 {
@@ -4878,6 +4824,14 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .min-w-0 {
@@ -5390,11 +5344,6 @@ input.tab:checked + .tab-content,
   border-bottom-right-radius: 0.25rem;
 }
 
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
-
 .rounded-t-md {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
@@ -5432,6 +5381,11 @@ input.tab:checked + .tab-content,
 .border-y-\[10px\] {
   border-top-width: 10px;
   border-bottom-width: 10px;
+}
+
+.border-x-2 {
+  border-left-width: 2px;
+  border-right-width: 2px;
 }
 
 .border-b-0 {
@@ -5542,14 +5496,13 @@ input.tab:checked + .tab-content,
   border-color: rgb(var(--color-primary) / var(--tw-border-opacity));
 }
 
+.border-primary\/30 {
+  border-color: rgb(var(--color-primary) / 0.3);
+}
+
 .border-secondary {
   --tw-border-opacity: 1;
   border-color: rgb(var(--color-secondary) / var(--tw-border-opacity));
-}
-
-.border-sky-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(224 242 254 / var(--tw-border-opacity));
 }
 
 .border-slate-300\/60 {
@@ -5586,28 +5539,6 @@ input.tab:checked + .tab-content,
 
 .border-white\/5 {
   border-color: rgb(255 255 255 / 0.05);
-}
-
-.border-sky-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(186 230 253 / var(--tw-border-opacity));
-}
-
-.border-sky-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(125 211 252 / var(--tw-border-opacity));
-}
-
-.border-primary\/5 {
-  border-color: rgb(var(--color-primary) / 0.05);
-}
-
-.border-primary\/50 {
-  border-color: rgb(var(--color-primary) / 0.5);
-}
-
-.border-primary\/30 {
-  border-color: rgb(var(--color-primary) / 0.3);
 }
 
 .border-b-primary {
@@ -5840,6 +5771,18 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.bg-bg1\/40 {
+  background-color: rgb(var(--color-bg1) / 0.4);
+}
+
+.bg-content\/20 {
+  background-color: rgb(var(--color-content) / 0.2);
+}
+
+.bg-content\/30 {
+  background-color: rgb(var(--color-content) / 0.3);
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -5988,6 +5931,10 @@ input.tab:checked + .tab-content,
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-1 {
@@ -6255,11 +6202,6 @@ input.tab:checked + .tab-content,
   line-height: 1.25rem;
 }
 
-.text-sm\/\[12px\] {
-  font-size: 0.875rem;
-  line-height: 12px;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -6272,10 +6214,6 @@ input.tab:checked + .tab-content,
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-medium {
@@ -6333,10 +6271,6 @@ input.tab:checked + .tab-content,
 
 .leading-\[2\.15\] {
   line-height: 2.15;
-}
-
-.leading-normal {
-  line-height: 1.5;
 }
 
 .leading-tight {
@@ -6411,10 +6345,6 @@ input.tab:checked + .tab-content,
 
 .text-content\/40 {
   color: rgb(var(--color-content) / 0.4);
-}
-
-.text-content\/50 {
-  color: rgb(var(--color-content) / 0.5);
 }
 
 .text-content\/60 {
@@ -6590,15 +6520,6 @@ input.tab:checked + .tab-content,
   color: rgb(202 138 4 / var(--tw-text-opacity));
 }
 
-.text-primary\/70 {
-  color: rgb(var(--color-primary) / 0.7);
-}
-
-.text-bg2 {
-  --tw-text-opacity: 1;
-  color: rgb(var(--color-bg2) / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -6731,6 +6652,12 @@ input.tab:checked + .tab-content,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-black\/5 {
   --tw-shadow-color: rgb(0 0 0 / 0.05);
   --tw-shadow: var(--tw-shadow-colored);
@@ -6768,6 +6695,16 @@ input.tab:checked + .tab-content,
 
 .shadow-sky-500\/40 {
   --tw-shadow-color: rgb(14 165 233 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-shadow\/30 {
+  --tw-shadow-color: rgb(var(--color-shadow) / 0.3);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-shadow\/20 {
+  --tw-shadow-color: rgb(var(--color-shadow) / 0.2);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -7253,6 +7190,16 @@ body > div.z-\[1070\] > div > div > div.flex.flex-row.items-center.justify-betwe
   width: 100%;
 }
 
+/* MAterial icons */
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 body > div.z-\[1070\] > div > div > .\*\:select-none > *div.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
   color: rgb(var(--color-content));
 }
@@ -7306,10 +7253,18 @@ body > div.z-\[1070\] > div > div > :is(.dark .dark\:hover\:bg-transparent:hover
   body > div.z-\[1070\] > div > div > div.md\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
     color: rgb(var(--color-content));
   }
+
+  body > div.z-\[1070\] > div > div > div.md\:w-full.flex.flex-row.items-center.justify-between.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
 }
 
 @media (min-width: 1024px) {
   body > div.z-\[1070\] > div > div > div.lg\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
+
+  body > div.z-\[1070\] > div > div > div.lg\:justify-between.flex.flex-row.items-center.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
     color: rgb(var(--color-content));
   }
 }
@@ -7598,12 +7553,12 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:cursor-pointer:hover {
-  cursor: pointer;
-}
-
 .hover\:cursor-default:hover {
   cursor: default;
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border-0:hover {
@@ -7666,9 +7621,8 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
 
-.hover\:bg-sky-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+.hover\:bg-primary\/60:hover {
+  background-color: rgb(var(--color-primary) / 0.6);
 }
 
 .hover\:bg-slate-400:hover {
@@ -7688,10 +7642,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-primary\/60:hover {
-  background-color: rgb(var(--color-primary) / 0.6);
 }
 
 .hover\:bg-gradient-to-br:hover {
@@ -7772,10 +7722,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-primary\/60:hover {
-  color: rgb(var(--color-primary) / 0.6);
 }
 
 .hover\:underline:hover {
@@ -8241,10 +8187,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   border-color: rgb(var(--color-primary) / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:border-sky-500\/15) {
-  border-color: rgb(14 165 233 / 0.15);
-}
-
 :is(.dark .dark\:border-slate-600\/60) {
   border-color: rgb(71 85 105 / 0.6);
 }
@@ -8275,10 +8217,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 :is(.dark .dark\:bg-neutral-700) {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-sky-500\/10) {
-  background-color: rgb(14 165 233 / 0.1);
 }
 
 :is(.dark .dark\:bg-sky-900) {
@@ -8386,11 +8324,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 :is(.dark .dark\:text-secondary) {
   --tw-text-opacity: 1;
   color: rgb(var(--color-secondary) / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:text-sky-300) {
-  --tw-text-opacity: 1;
-  color: rgb(125 211 252 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:text-sky-50) {
@@ -8533,6 +8466,14 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     width: fit-content;
   }
 
+  .sm\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .sm\:w-\[50\%\] {
+    width: 50%;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -8587,6 +8528,22 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     height: 350px;
   }
 
+  .md\:h-\[450px\] {
+    height: 450px;
+  }
+
+  .md\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
   .md\:w-10 {
     width: 2.5rem;
   }
@@ -8622,6 +8579,14 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
   }
 
   .md\:min-w-96 {
@@ -8726,6 +8691,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .lg\:justify-start {
     justify-content: flex-start;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:justify-evenly {
