--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -430,3 +430,13 @@ a:hover {
   .slider-container {
     @apply w-full;
   }
+
+  /* MAterial icons */
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
