--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -254,7 +254,7 @@ a:hover {
     width: 300px !important;
 }
 
-.realistic-marker-highlight{
+/* .realistic-marker-highlight{
     position:relative;
   }
   
@@ -269,6 +269,24 @@ a:hover {
     left:-0.25em;
     top:0.1em;
     padding:0 0.25em;
+} */
+
+
+#hero-title-name-inner {
+  position: relative;
+}
+
+#hero-title-name-inner::before {
+  background-color: rgba(255, 78, 78, 0.774);
+
+  content: "";
+  position: absolute;
+  width: calc(100% + 4px);
+  height: 60%;
+  left: -2px;
+  bottom: 0;
+  z-index: -1;
+  transform: rotate(-2deg);
 }
 
 /* -------------- TOOLTIP --------------  */
