--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -1442,6 +1442,15 @@ html{
   scrollbar-width: none;
 }
 
+.chat {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .checkbox {
   flex-shrink: 0;
   --chkbg: var(--fallback-bc,oklch(var(--bc)/1));
@@ -4142,10 +4151,6 @@ input.tab:checked + .tab-content,
   top: 13px;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
 .isolate {
   isolation: isolate;
 }
@@ -4567,6 +4572,10 @@ input.tab:checked + .tab-content,
   height: 0px;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -4667,10 +4676,6 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
 .max-h-14 {
   max-height: 3.5rem;
 }
@@ -4695,6 +4700,10 @@ input.tab:checked + .tab-content,
   min-height: auto;
 }
 
+.min-h-full {
+  min-height: 100%;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -4705,6 +4714,10 @@ input.tab:checked + .tab-content,
 
 .w-0\.5 {
   width: 0.125rem;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .w-1\/2 {
@@ -4859,10 +4872,6 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
-}
-
-.w-1 {
-  width: 0.25rem;
 }
 
 .min-w-0 {
@@ -5120,22 +5129,6 @@ input.tab:checked + .tab-content,
   list-style-type: none;
 }
 
-.list-\[upper-roman\] {
-  list-style-type: upper-roman;
-}
-
-.list-\[\>\>\] {
-  list-style-type: >>;
-}
-
-.list-\[\'\>\>\'\] {
-  list-style-type: '>>';
-}
-
-.list-\[\'\1F537\'\] {
-  list-style-type: '🔷';
-}
-
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -5260,12 +5253,6 @@ input.tab:checked + .tab-content,
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
-}
-
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -5286,10 +5273,6 @@ input.tab:checked + .tab-content,
 
 .overflow-visible {
   overflow: visible;
-}
-
-.overflow-scroll {
-  overflow: scroll;
 }
 
 .overflow-x-auto {
@@ -5347,6 +5330,10 @@ input.tab:checked + .tab-content,
   border-radius: 1rem;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .rounded-\[0\.25rem\] {
   border-radius: 0.25rem;
 }
@@ -5381,10 +5368,6 @@ input.tab:checked + .tab-content,
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .\!rounded-b-none {
@@ -6161,10 +6144,6 @@ input.tab:checked + .tab-content,
 
 .-indent-\[999px\] {
   text-indent: -999px;
-}
-
-.indent-4 {
-  text-indent: 1rem;
 }
 
 .align-middle {
@@ -7029,7 +7008,7 @@ a:hover {
   content: "";
   position: absolute;
   width: calc(100% + 4px);
-  height: 60%;
+  height: 90%;
   left: -2px;
   bottom: 0;
   z-index: -1;
